2012-04-02  Hirofumi Kosaka  <kosaka@rworks.jp>

	* include/functions_api.php: Merged from trunk: Added new
	functions get_module_groups and get_plugins to the API.

2012-03-30 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* images/splash_error.png: Added background image for error views.
	
	* include/styles/pandora.css
	 general/error_emptyconfig.php
	 general/error_perms.php
	 general/error_authconfig.php
	 general/error_noconfig.php
	 general/error_install.php
	 general/error_dbconfig.php: Changed views to the new look and feel. 

2012-03-30 Dario Rodriguez <dario.rodriguez@artica.es>

	*include/functions_menu.php,
	include/styles/menu.css,
	include/functions_visual_map.php,
	include/functions_reports.php,
	operation/visual_console/render_view.php,
	operation/visual_console/index.php,
	operation/agentes/networkmap.php,
	operation/servers/view_server.php,
	operation/servers/recon_view.php,
	operation/servers/view_server_detail.php,
	operation/menu.php,
	operation/reporting/reporting_viewer.php,
	operation/reporting/graph_viewer.php,
	general/header.php,
	godmode/servers/modificar_server.php,
	godmode/menu.php,
	godmode/reporting/graph_builder.main.php,
	godmode/reporting/visual_console_builder.wizard.php,
	godmode/reporting/visual_console_builder.php,
	godmode/reporting/visual_console_builder.elements.php,
	godmode/reporting/graph_builder.php,
	godmode/reporting/graph_builder.graph_editor.php,
	godmode/reporting/reporting_builder.php,
	godmode/reporting/visual_console_builder.editor.php,
	godmode/reporting/map_builder.php,
	godmode/reporting/graphs.php: Changing menu structure (Agent Detail, 
	Network Maps and Reporting).

2012-03-29  Hirofumi Kosaka  <kosaka@rworks.jp>

	* mobile/operation/agents/monitor_status.php
	mobile/operation/agents/view_agents.php
	mobile/operation/events/events.php: Fixed reference paths to
	image files for page navigation ('go next' or so).

2012-03-28  Sergio Martin <sergio.martin@artica.es>

	* include/functions_reporting.php