@@ -1,3 +1,9 @@
+2012-04-02 Dario Rodriguez <dario.rodriguez@artica.es>
+
+	* include/functions_menu.php
+	operation/menu.php
+	godmode/menu.php: Finish changes in reporting menu.
+
 2012-04-02  Hirofumi Kosaka  <kosaka@rworks.jp>
 
 	* include/functions_api.php: Merged from trunk: Added new
